added gamemode command